data dumpster graph

--- a/data.html
+++ b/data.html
@@ -77,10 +77,21 @@
         <br>
         <br>
 
-    <img src="chrom.jpeg" alt="Computer Man" style="width:100%;height:70%;">
+    <img src="Rabbit.jpeg" alt="Computer Man" style="width:100%;height:70%;">
     <br>
         <br>
         <p style="text-align: center;"> Through training Rabbit against an Xpilot agent, we were able to retrieve the chromosome with the highest fitness score. This implies that through the generations the robot was being tested this chromosome was able to stay alive the longest and do the best against its opponents. To keep this chromosome, we are assigning its values to our agent, Rabbit as shown Above. </p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+       
+
+    <img src="Dumpster.jpg" alt="Computer Man" style="width:100%;height:70%;">
+    <br>
+        <br>
+        <p style="text-align: center;"> Through training Dumpster against an Xpilot agent, the chromosome with the highest fitness score is shown above. Its values are then assigned to the Dumpster agent</p>
         <br>
 
       </div>
