--- a/data.html
+++ b/data.html
@@ -91,7 +91,7 @@
     <img src="Dumpster.jpg" alt="Computer Man" style="width:100%;height:70%;">
     <br>
         <br>
-        <p style="text-align: center;"> Through training Dumpster against an Xpilot agent, the chromosome with the highest fitness score is shown above. Its values are then assigned to the Dumpster agent</p>
+        <p style="text-align: center;"> Through training Dumpster against an Xpilot agent, the chromosome with the highest fitness score is shown above. Its values are then assigned to our agent, Dumpster </p>
         <br>
 
       </div>
