--- a/descrption.html
+++ b/descrption.html
@@ -33,7 +33,7 @@
           </li>
           <li>Results <i class="fa fa-caret-down"></i>
             <ul>
-              <a href="data.html">Data</a>
+              <a href="data.html">Data/Results</a>
               <a href="conclusion.html">Conclusion</a>
             </ul>
           </li>
