--- a/conclusion.html
+++ b/conclusion.html
@@ -3,6 +3,7 @@
   <meta charset="UTF-8">
   <link href="web.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="main_style.css">
+  <link rel="stylesheet" type="text/css" href="Conclusion.css">
 
 </head>
 <body>  
