--- a/data.html
+++ b/data.html
@@ -110,6 +110,19 @@
         <p style="text-align: center;"> Dumpster does not work as expected. During the training, it almost learns too fast and does not do well when it is put up against another agent. it struggles to avoid walls. We think this happens because it is so focused on killing the other agents that it doesn't really get to learn how to do other things, such as avoiding walls. Or it could also because the opponent kills Dumpster too quickly for it to do a lot of learning.  Overall, Dumpster has room for improvements and more training can be done.  </p>
         <br>
         <br>
+        <br>
+        <h2 >Dumpster Agent - Rabbit Agent</h2>
+        <br>
+        <img src="Dumpster_Rabbit.png" alt="Computer Man" style="width:100%;height:70%;">
+        <br>
+        <br>
+        <p style="text-align: center;"> Above is the graph of training Dumpster against Rabbit agent. </p>
+
+        <br>
+        <h3>Dumpster Agent - Rabbit Agent Results</h3>
+        <p style="text-align: center;"> While training Dumpster against Rabbit, we see significant improvement in the fitness score of both sides. Rabbit learns how to survive pretty well but on the other hand, Dumpster also focuses more on surviving than killing the enemy. After a while, both of the agents are learning to survive for very long periods of time which is why the fitness score is very high. Overall, more training can be done on Dumpster to help it find a balance between attacking and surviving depending on the situation that it is in.  </p>
+        <br>
+
 
 
       </div>
